finished the navigation code

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,13 @@
   
   }
 
+  .intro {
+      
+      img {
+        border-radius: 5px;
+      }
+  }
+
   .space-images {
     display: flex;
     flex-wrap: wrap;
