--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation code here
+
+.navigation {
+    .flexy;
+    flex-direction: column;
+    align-items: center;
+    //border: solid;
+    background-color: #dedede;
+
+    .navlogo {
+        font-family: 'Russo One', sans-serif;
+        color: @ebony-clay;
+        font-size: 40px;
+        margin: 2%;
+    }
+    
+    .navbar {
+        .flexy;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 30%;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 1.6rem;
+        padding-bottom: 1%;
+    }
+}
