--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+.flexy {
+  display: flex;
+  flex-wrap: wrap;
+}
+.standardfont {
+  font-size: 12px;
+  color: black;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -160,6 +168,29 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  background-color: #dedede;
+}
+.navigation .navlogo {
+  font-family: 'Russo One', sans-serif;
+  color: #23293B;
+  font-size: 40px;
+  margin: 2%;
+}
+.navigation .navbar {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 30%;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.6rem;
+  padding-bottom: 1%;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -175,6 +206,9 @@ footer {
 }
 .home .intro p {
   padding: 0 15px;
+}
+.home .intro img {
+  border-radius: 5px;
 }
 .home .space-images {
   display: flex;
