--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins Here
+
+.flexy {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.standardfont {
+    font-size: 12px;
+    color: black;
+}
