--- a/less/footer.less
+++ b/less/footer.less
@@ -9,3 +9,21 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+.btn {
+  .flexy;
+  justify-content: center;
+  //border: solid;
+  color: white;
+  white-space: nowrap;
+  font-size: 2rem;
+  max-width: 25%;
+  padding: 2% 17% 2% 17%;
+  border-radius: 5px;
+  background-color: #22283A;
+}
+
+.btn:hover {
+  background-color: white;
+  color: #22283A;
+}
