--- a/less/footer.less
+++ b/less/footer.less
@@ -11,16 +11,7 @@ footer {
 }
 
 .btn {
-  .flexy;
-  justify-content: center;
-  //border: solid;
-  color: white;
-  white-space: nowrap;
-  font-size: 2rem;
-  max-width: 25%;
-  padding: 2% 17% 2% 17%;
-  border-radius: 5px;
-  background-color: #22283A;
+  .btnmixin;
 }
 
 .btn:hover {
