--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,3 +9,15 @@
     font-size: 12px;
     color: black;
 }
+
+.btnmixin(@color: white; @font-size: 2rem; @border-radius: 5px) {
+    .flexy;
+  justify-content: center;
+  color: @color;
+  white-space: nowrap;
+  font-size: @font-size;
+  max-width: 25%;
+  padding: 2% 17% 2% 17%;
+  border-radius: @border-radius;
+  background-color: #22283A;
+}
