finished MVP requirements

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,6 +12,10 @@
         color: @ebony-clay;
         font-size: 40px;
         margin: 2%;
+
+        @media @mobile {
+            padding-bottom: 1%;
+        }
     }
     
     .navbar {
@@ -22,5 +26,10 @@
         font-family: 'Ubuntu', sans-serif;
         font-size: 1.6rem;
         padding-bottom: 1%;
+
+        @media @mobile {
+            width: 75%;
+            padding-bottom: 2%;
+        }
     }
 }
