--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,11 @@ p {
   font-size: 40px;
   margin: 2%;
 }
+@media (max-width: 500px) {
+  .navigation .navlogo {
+    padding-bottom: 1%;
+  }
+}
 .navigation .navbar {
   display: flex;
   flex-wrap: wrap;
@@ -190,6 +195,12 @@ p {
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.6rem;
   padding-bottom: 1%;
+}
+@media (max-width: 500px) {
+  .navigation .navbar {
+    width: 75%;
+    padding-bottom: 2%;
+  }
 }
 footer {
   color: #22283B;
@@ -213,6 +224,13 @@ footer {
   border-radius: 5px;
   background-color: #22283A;
 }
+@media (max-width: 500px) {
+  .btn {
+    max-width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
 .btn:hover {
   background-color: white;
   color: #22283A;
@@ -224,12 +242,37 @@ footer {
   padding: 0 15px;
 }
 .home .intro img {
+  display: flex;
+  flex-wrap: wrap;
   border-radius: 5px;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    max-height: 130px;
+  }
 }
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    display: block;
+    width: 90%;
+    padding-left: 2%;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .space-images img {
   width: 28%;
@@ -253,18 +296,39 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 20px;
+    margin-top: 20px;
+  }
+}
 .home .walk .walk-text {
-  width: 50%;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    margin-top: 5%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+  white-space: nowrap;
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
 .home .walk .walk-img {
-  width: 46%;
-  margin-left: 4%;
+  width: 100%;
+  margin-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
