--- a/less/footer.less
+++ b/less/footer.less
@@ -12,6 +12,12 @@ footer {
 
 .btn {
   .btnmixin;
+
+  @media @mobile {
+    max-width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
 }
 
 .btn:hover {
