--- a/less/home-page.less
+++ b/less/home-page.less
@@ -17,7 +17,12 @@
   .intro {
       
       img {
+        .flexy;
         border-radius: 5px;
+
+        @media @mobile {
+          max-height: 130px;
+          }
       }
   }
 
@@ -26,12 +31,35 @@
     flex-wrap: wrap;
     width: 100%;
 
+    .blast {
+      @media @mobile {
+        display: block;
+        width: 90%;
+        padding-left: 2%;
+        text-align: center;
+      }
+    }
+
+    .sky {
+      @media @mobile {
+        display: none;
+      }
+    }
+
+    .launch {
+      @media @mobile {
+        display: none;
+      }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
     }
+
+  
   }
 
   .visit-planets {
@@ -53,24 +81,39 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+      flex-direction: column-reverse;
+      align-items: center;
+      padding: 20px;
+      margin-top: 20px;
+    }
+
     .walk-text {
-      width: 50%;
+      width: 100%;
+
+      @media @mobile {
+        margin-top: 5%;
+      }
 
       h3 {
         margin-bottom: 10px;
+        white-space: nowrap;
       }
 
       p {
         margin-bottom: 26px;
       }
-
-      .btn {
-      }
     }
 
     .walk-img {
-      width: 46%;
-      margin-left: 4%;
+      width: 100%;
+      margin-left: 1%;
+
+      @media @mobile {
+        .flexy;
+        justify-content: center;
+
+      }
       
       img {
         width: 100%;
@@ -79,4 +122,4 @@
       }
     }
   }
-}// home
+}
